--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
+    "express-session": "^1.15.6",
+    "http-errors": "~1.6.2",
     "lowdb": "^1.0.0",
+    "multer": "^1.4.1",
     "nodemon": "^1.18.6",
     "pug": "^2.0.3"
-  },
-  "devDependencies": {
-    "concurrently": "^4.1.0"
   }
 }
