--- a/package.json
+++ b/package.json
@@ -3,14 +3,20 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {
-    "start": "set PORT=4200&& nodemon index"
+  "nodemonConfig": {
+    "ignore": ["models/db.json", "public/assets/img/products/*"]
   },
+  "scripts": {
+    "dev": "set PORT=4200&& nodemon index",
+    "start": "set PORT=4200&& node index.js"
+  },
+
   "author": "",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.3",
     "connect-flash": "^0.1.1",
+    "connect-redis": "^3.4.0",
     "cookie-parser": "^1.4.3",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
